# div-gui

./: .gitignore  Dockerfile  README.md  package.json  rollup.config.js
neon/: package.json
neon/native/: Cargo.toml
neon/native/src/: lib.rs
relm/: Cargo.toml
relm/src/: main.rs
services/: Cargo.toml
services/core/: package.json
services/core/native/: Cargo.toml
services/neon/native/: Cargo.toml
services/src/: lib.rs
services/src/models/: mod.rs
src/: App.svelte  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cmd.rs  handlers.rs  main.rs
src-tauri/src/types/: mod.rs
src/comp/ui/: input.svelte  menubar.svelte  nav.svelte  statusbar.svelte  switch.svelte  topbar.svelte
src/pages/: _layout.svelte  dash.svelte  index.svelte  search.svelte
src/pages/home/: index.svelte
src/pages/item/: new.svelte
src/pages/rec/: new.svelte
