[package]
name = "relm"
version = "0.1.0"
authors = ["Chris P <chrisp1877@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono="*"
gdk="*"
gio="*"
glib = "*"
gtk = "^0.8.0"
relm = "^0.19.0"
relm-derive = "^0.19.0"


