[package]
name = "services"
version = "0.1.0"
authors = ["Chris P <chrisp1877@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest="*"
serde={version="*",features=["derive"]}
nom="*"
pest="*"
rayon="*"
select="*"
serde_derive="*"
serde_json="*"
chrono={version="*", features=["serde"]}
#divis={path="../../div"}

#chrono="*"
#rayon="*"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "z"
