[package]
name = "core"
version = "0.1.0"
authors = ["Chris P <chrisp1877@gmail.com>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "core"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.4.0"

[dependencies]
neon = "0.4.0"
rayon="*"
reqwest="*"
nom="*"
